--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+body, html
+    height: 100%
+    width: 100%
+    margin: 0 !important
+
+    h1
+        font-size: 2rem
+        margin: 0 !important
+    p
+        font-size: 1rem
+        margin: 0 !important
