--- a/src/app/components/login/login/login.component.sass
+++ b/src/app/components/login/login/login.component.sass
@@ -12,8 +12,8 @@ $bg-image-url: "../../../../assets/background.png"
         height: 100%
 
 .login-menu
-    width: 30rem
-    height: 25rem
+    width: 35rem
+    height: 30rem
     background-color: #fff
     border-radius: 0.5rem
 
@@ -28,6 +28,11 @@ $bg-image-url: "../../../../assets/background.png"
     @media (max-width: 768px)
         margin: 4rem 2rem 4rem 2rem
 
+.form-flex
+    display: flex
+    flex-direction: column
+    gap: 1.5rem
+
 .image-logo
     width: 50%
     margin-bottom: 1rem
@@ -37,6 +42,12 @@ $bg-image-url: "../../../../assets/background.png"
     display: flex
     flex-direction: column
     gap: .25rem
+    margin-bottom: 1.5rem
 
 .text-and-input
     display: flex
+
+.input-flex
+    flex: 30%
+    display: flex
+    flex-direction: column
