--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,11 +1,16 @@
+@import '~bootstrap/dist/css/bootstrap.css'
+
 body, html
     height: 100%
     width: 100%
     margin: 0 !important
 
-    h1
-        font-size: 2rem
-        margin: 0 !important
-    p
-        font-size: 1rem
-        margin: 0 !important
+h1
+    font-size: 2rem
+    margin: 0 !important
+p
+    font-size: 1rem
+    margin: 0 !important
+
+.full-width
+    width: 100%
