--- a/src/styles.sass
+++ b/src/styles.sass
@@ -12,5 +12,7 @@ p
     font-size: 1rem
     margin: 0 !important
 
-.full-width
-    width: 100%
+.btn.btn-primary:disabled
+    background-color: #ececec
+    border-color: #ececec
+    color: #1f1f1f
