--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap.css'
+@import "~bootstrap-icons/font/bootstrap-icons.css"
 
 body, html
     height: 100%
@@ -6,8 +7,19 @@ body, html
     margin: 0 !important
 
 h1
-    font-size: 2rem
+    font-size: 2rem !important
     margin: 0 !important
+
+h2
+    font-size: 1.5rem !important
+    margin: 0 !important
+h3
+    font-size: 1.25rem !important
+    margin: 0 !important
+h4
+    font-size: 1rem !important
+    margin: 0 !important
+    font-weight: 300
 p
     font-size: 1rem
     margin: 0 !important
@@ -16,3 +28,117 @@ p
     background-color: #ececec
     border-color: #ececec
     color: #1f1f1f
+
+// Primary color style generated for bootstrap. Source: https://lingtalfi.com/bootstrap4-color-generator
+.alert-primary
+    color: #051932
+    background-color: #8cbaf2
+    border-color: #7aaff0
+
+    & hr
+        border-top-color: #63a1ed
+
+    & .alert-link
+        color: #000205
+
+.badge-primary
+    color: #fff
+    background-color: #1252a1
+
+    &[href]:hover, .badge-primary[href]:focus
+        color: #fff
+        background-color: #0c3a73
+
+.bg-primary
+    background-color: #1252a1 !important
+
+a.bg-primary:hover, a.bg-primary:focus,
+button.bg-primary:hover,
+
+    button:focus
+        background-color: #0c3a73 !important
+
+.border-primary
+    border-color: #1252a1 !important
+
+.btn-primary
+    color: #fff
+    background-color: #1252a1
+    border-color: #1252a1
+
+    &:hover
+        color: #fff
+        background-color: #0e4180
+        border-color: #0c3a73
+
+    &:focus, .btn-primary.focus
+        box-shadow: 0 0 0 0.2rem rgba(18, 82, 161, 0.5)
+
+    &.disabled, .btn-primary:disabled
+        color: #1f1f1f
+        background-color: #ececec
+        border-color: #ececec
+
+    &:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle
+        color: #fff
+        background-color: #0c3a73
+        border-color: #0b3365
+
+    &:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus
+        box-shadow: 0 0 0 0.2rem rgba(18, 82, 161, 0.5)
+
+.btn-outline-primary
+    color: #1252a1
+    background-color: transparent
+    border-color: #1252a1
+
+    &:hover
+        color: #fff
+        background-color: #1252a1
+        border-color: #1252a1
+
+    &:focus, .btn-outline-primary.focus
+        box-shadow: 0 0 0 0.2rem rgba(18, 82, 161, 0.5)
+
+    &.disabled, .btn-outline-primary:disabled
+        color: #1252a1
+        background-color: transparent
+
+    &:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle
+        color: #fff
+        background-color: #1252a1
+        border-color: #1252a1
+
+    &:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus
+        box-shadow: 0 0 0 0.2rem rgba(18, 82, 161, 0.5)
+
+.list-group-item-primary
+    color: #051932
+    background-color: #7aaff0
+
+    &.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus
+        color: #051932
+        background-color: #63a1ed
+
+    &.list-group-item-action.active
+        color: #fff
+        background-color: #051932
+        border-color: #051932
+
+.table-primary,
+.table-primary > th,
+.table-primary > td
+    background-color: #7aaff0
+
+.table-hover .table-primary:hover
+    background-color: #63a1ed
+
+.table-hover .table-primary:hover > td,
+.table-hover .table-primary:hover > th
+    background-color: #63a1ed
+
+.text-primary
+    color: #1252a1 !important
+
+    a:hover, a.text-primary:focus
+        color: #0c3a73 !important
