--- a/src/app/components/login/login/login.component.sass
+++ b/src/app/components/login/login/login.component.sass
@@ -14,7 +14,7 @@ $bg-image-url: "../../../../assets/background.png"
 
 .login-menu
     width: 35rem
-    height: 30rem
+    height: 31.5rem
     background-color: #fff
     border-radius: 0.5rem
 
@@ -32,11 +32,11 @@ $bg-image-url: "../../../../assets/background.png"
 .form-flex
     display: flex
     flex-direction: column
-    gap: 1.5rem
+    gap: 1rem
 
 .image-logo
-    width: 50%
-    margin-bottom: 1rem
+    width: 45%
+    margin: 1rem 0 2rem 0
     align-self: center
 
 .title-and-subtitle
@@ -44,4 +44,3 @@ $bg-image-url: "../../../../assets/background.png"
     flex-direction: column
     gap: .25rem
     margin-bottom: 1.5rem
-
